# AlienFX-Aurora

./: .gitignore  README.md  install.sh  meson.build  uninstall.sh
src/: AlienFX-Aurora.desktop  alienfx-aurora-application.c  alienfx-aurora-application.h  alienfx-aurora-window.c  alienfx-aurora-window.cmb  alienfx-aurora-window.h  alienfx-aurora-window.ui  alienfx-aurora.gresource.xml  humanfx.c  humanfx.h  main.c  meson.build
